[gd_scene load_steps=19 format=2]

[ext_resource path="res://MazeTile.gd" type="Script" id=1]
[ext_resource path="res://Images/rock_albedo.jpg" type="Texture" id=2]
[ext_resource path="res://Images/rock_ao.jpg" type="Texture" id=3]
[ext_resource path="res://Images/rock_metal.jpg" type="Texture" id=4]
[ext_resource path="res://Images/rock_rough.jpg" type="Texture" id=5]
[ext_resource path="res://Images/sand_albedo.jpg" type="Texture" id=6]
[ext_resource path="res://Images/sand_metal.jpg" type="Texture" id=7]
[ext_resource path="res://Images/sand_normal.jpg" type="Texture" id=8]
[ext_resource path="res://Images/sand_rough.jpg" type="Texture" id=9]

[sub_resource type="CubeMesh" id=24]
size = Vector3( 0.1, 2, 1.7 )

[sub_resource type="SpatialMaterial" id=17]
albedo_texture = ExtResource( 2 )
metallic = 1.0
metallic_texture = ExtResource( 4 )
roughness_texture = ExtResource( 5 )
ao_enabled = true
ao_light_affect = 1.0
ao_texture = ExtResource( 3 )
ao_on_uv2 = false
ao_texture_channel = 0

[sub_resource type="QuadMesh" id=18]

[sub_resource type="SpatialMaterial" id=19]
albedo_texture = ExtResource( 6 )
metallic = 0.5
metallic_texture = ExtResource( 7 )
roughness_texture = ExtResource( 9 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=20]

[sub_resource type="CubeMesh" id=21]
size = Vector3( 0.3, 2, 0.3 )

[sub_resource type="SpatialMaterial" id=25]
albedo_color = Color( 0.556863, 0.556863, 0.556863, 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 5 )
uv1_scale = Vector3( 1, 2, 1 )

[sub_resource type="BoxShape" id=22]
extents = Vector3( 0.05, 1, 0.85 )

[sub_resource type="BoxShape" id=23]
extents = Vector3( 0.15, 1, 0.15 )

[node name="MazeTile" type="Spatial"]
script = ExtResource( 1 )

[node name="Meshes" type="Spatial" parent="."]

[node name="Wall_North" type="MeshInstance" parent="Meshes"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 1, 0.95 )
visible = false
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="Wall_South" type="MeshInstance" parent="Meshes"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 1, -0.95 )
visible = false
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="Wall_East" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95, 1, 0 )
visible = false
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="Wall_West" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95, 1, 0 )
visible = false
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="Floor" type="MeshInstance" parent="Meshes"]
transform = Transform( 2, -3.49691e-007, -6.03751e-011, -6.03751e-011, -0.000690611, 2, -3.49691e-007, -2, -0.000690611, 0, 0, 0 )
mesh = SubResource( 18 )
material/0 = SubResource( 19 )

[node name="Ceiling" type="MeshInstance" parent="Meshes"]
transform = Transform( 2, -1.42109e-014, -6.03751e-011, -6.03751e-011, -0.000690611, -2, -1.42109e-014, 2, -0.000690611, 0, 1.96694, 0 )
mesh = SubResource( 20 )
material/0 = SubResource( 17 )

[node name="Pillar_NE" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 1 )
visible = false
mesh = SubResource( 21 )
material/0 = SubResource( 25 )

[node name="Pillar_NW" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
visible = false
mesh = SubResource( 21 )
material/0 = SubResource( 25 )

[node name="Pillar_SE" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1 )
visible = false
mesh = SubResource( 21 )
material/0 = SubResource( 25 )

[node name="Pillar_SW" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1 )
visible = false
mesh = SubResource( 21 )
material/0 = SubResource( 25 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="Wall_West_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.95, 1, 0 )
shape = SubResource( 22 )

[node name="Wall_East_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.95, 1, 0 )
shape = SubResource( 22 )

[node name="Wall_South_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 1, -0.95 )
shape = SubResource( 22 )

[node name="Wall_North_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 1, 0.95 )
shape = SubResource( 22 )

[node name="Pillar_NE_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 1 )
shape = SubResource( 23 )

[node name="Pillar_NW_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1 )
shape = SubResource( 23 )

[node name="Pillar_SE_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1 )
shape = SubResource( 23 )

[node name="Pillar_SW_CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -1 )
shape = SubResource( 23 )
